# nebula

./: CONTRIBUTING.md  README.md
.githooks/: commit-msg
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
client/: package-lock.json  package.json
client/src/: App.css  App.tsx  index.css  index.scss
client/src/features/home/: Home.css  Home.scss  Home.tsx
client/src/features/login/: Login.css  Login.scss  Login.tsx
client/src/features/register/: Register.tsx
client/src/features/signup/: Signup.scss  Signup.tsx
client/src/features/text_editor/: TextEditor.scss  TextEditor.tsx
client/src/routes/: AuthRouter.tsx
docs/: requirements.md
server/: example_usage.py  main.py  pyproject.toml
server/routes/: auth.py  workspace.py
server/utils/: jwt.py  jwt_handler.py
