[project]
name = "nebula-server"
version = "0.1.0"
description = ""
authors = [{ name = "BiltuDas1", email = "billionto@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["fastapi[standard] (>=0.135.3,<0.136.0)", "pyjwt (>=2.11.0,<3.0.0)", "passlib (>=1.7.4,<2.0.0)", "tortoise-orm (>=1.1.7,<2.0.0)", "aiomysql (>=0.3.2,<0.4.0)", "tzdata (>=2026.1,<2027.0)", "cryptography (>=46.0.7,<47.0.0)"]

[dependency-groups]
dev = ["python-dotenv (>=1.2.1,<2.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
